<resources>
    <string name="app_name">Space</string>
    <string name="mission_name">Mission Name: </string>
    <string name="rocket_name">Rocket Name: </string>
    <string name="launch_name">Launch Site Name: </string>
    <string name="date_launched">Date of Launch: </string>
    <string name="landing_type">Landing type: </string>
    <string name="regime">Regime: </string>
    <string name="manufacturer">Manufacturer: </string>
    <string name="reference_system">Reference System: </string>
    <string name="potrait">Potrait: </string>
    <string name="landscape">Landscape: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

</resources>
